force-app/main/default/objects/Broker_User__c/Broker_User__c.object-meta.xml
<CustomObject>
    <description>Portal login identity for a broker company. One record per company. Authenticated via OTP (no Community/User license). Separate from App_User__c (mobile app) and Assignee__c (internal sales portal).</description>
    <label>Broker User</label>
    <nameField>
        <displayFormat>BRK-{0}</displayFormat>
        <label>Broker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>