force-app/main/default/objects/Broker_User__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The broker company this portal login belongs to. Data anchor: bookings, commissions and documents are scoped through this Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Users</relationshipLabel>
    <relationshipName>Broker_Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>