force-app/main/default/objects/Broker_User__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Portal access on/off. Defaults false so a booking alone never grants access; a staff member enables it during manual approval.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>