force-app/main/default/objects/Broker_User__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Login identifier (the company admin email). Unique. Used as External ID so provisioning/backfill can upsert by email.</description>
    <externalId>true</externalId>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>