force-app/main/default/objects/Broker_User__c/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <description>Timestamp of the broker&apos;s last successful login. Used for idle tracking and future auto-deactivation.</description>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>