force-app/main/default/objects/Broker_User__c/fields/Last_OTP_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_OTP_Sent__c</fullName>
    <description>When the last login code email was sent. Enforces the resend cooldown (written by BrokerAuthEventHandler, never by the guest).</description>
    <label>Last OTP Sent</label>
    <type>DateTime</type>
</CustomField>