force-app/main/default/objects/Broker_User__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <description>Current one-time login code. Stored as text to preserve leading zeros. Cleared after successful verification.</description>
    <label>OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>