force-app/main/default/objects/Broker_User__c/fields/OTP_Attempts__c.field-meta.xml
<CustomField>
    <fullName>OTP_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Failed login-code attempts since the last code was sent. Login is blocked at 10 until a new code is requested (written by BrokerAuthEventHandler, never by the guest).</description>
    <label>OTP Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>