force-app/main/default/objects/Broker_User__c/fields/OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>OTP_Expiry__c</fullName>
    <description>When the current OTP expires (~10 minutes after it is sent). An OTP past this time is rejected.</description>
    <label>OTP Expiry</label>
    <type>DateTime</type>
</CustomField>