force-app/main/default/objects/Broker_User__c/fields/Session_Epoch__c.field-meta.xml
<CustomField>
    <fullName>Session_Epoch__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Session generation counter. Tokens embed the epoch they were issued under; bumping this number instantly invalidates ALL of this broker&apos;s sessions (logout does this automatically — an admin can too).</description>
    <label>Session Epoch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>