force-app/main/default/objects/Broker_User__c/fields/Session_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Session_Expiry__c</fullName>
    <description>When the current session expires. A session past this time forces the broker to log in again.</description>
    <label>Session Expiry</label>
    <type>DateTime</type>
</CustomField>