force-app/main/default/objects/Broker_User__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <description>Random token generated on OTP verification. Stored here and matched against the browser cookie to authenticate each page load.</description>
    <label>Session Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>